@@ -1,3 +1,14 @@
+2011-07-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: portability fixes in tests on amhello examples
+	* tests/amhello-binpkg.test: Don't use "tar xzf too.tag.gz" to
+	extract a gzip-compressed tarball, that's unportable to some
+	tar implementations; use the "gzip -dc fo.tar.gz | tar xf -"
+	idiom instead.
+	* tests/amhello-cflags.test: Likewise.
+	* tests/amhello-cross-compile.test: Likewise.
+	Suggestion from Ralf Wildenhues.
+
 2011-07-01  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	docs, tests: synchronize examples from docs to tests
